# provisioner-rs

./: CLAUDE.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/provisioner/: Cargo.toml
crates/provisioner-macro/: Cargo.toml
crates/provisioner-macro/src/: lib.rs
crates/provisioner/src/: config.rs  error.rs  form.rs  http.rs  lib.rs  storage.rs  util.rs
crates/provisioner/src/platform/: mod.rs
crates/provisioner/tests/: derive_macro.rs  provision_macro.rs
docs/roadmap/: 01-derive-macro.md  02-html-generation.md  03-form-parser.md  04-http-server.md  05-platform-esp32c3.md  06-storage.md  07-customization.md  08-testing.md  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
