[package]
name = "provisioner"
version = "0.1.0"
edition = "2024"

[features]
esp32c3 = [
    "dep:esp-hal",
    "esp-hal/esp32c3",
    "dep:esp-wifi",
    "dep:embassy-net",
    "dep:embassy-executor",
    "dep:sequential-storage",
    "dep:esp-storage",
]

[dependencies]
provisioner-macro = { path = "../provisioner-macro" }
heapless = "0.9"

esp-hal             = { version = "0.23", optional = true }
esp-wifi            = { version = "0.13", optional = true }
embassy-net         = { version = "0.6",  optional = true }
embassy-executor    = { version = "0.7",  optional = true }
sequential-storage  = { version = "0.9",  optional = true }
esp-storage         = { version = "0.3",  optional = true }
