[package]
name = "provisioner"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
esp32c3 = [
    "dep:esp-hal",
    "esp-hal/esp32c3",
    "dep:esp-radio",
    "esp-radio/esp32c3",
    "dep:embassy-net",
    "dep:embassy-executor",
    "dep:sequential-storage",
    "dep:esp-storage",
    "esp-storage/esp32c3",
]

[dependencies]
provisioner-macro = { path = "../provisioner-macro" }
heapless = "0.9"

esp-hal             = { version = "1.1", optional = true, features = ["unstable"] }
esp-radio           = { version = "0.18", optional = true, features = ["wifi"] }
embassy-net         = { version = "0.6",  optional = true, features = ["proto-ipv4", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-executor    = { version = "0.7",  optional = true }
sequential-storage  = { version = "0.9",  optional = true }
esp-storage         = { version = "0.9",  optional = true }
